force-app/main/default/objects/DA_Event__b/DA_Event__b.object-meta.xml
<CustomObject>
    <label>DA Event</label>
    <pluralLabel>DA Event</pluralLabel>
</CustomObject>