force-app/main/default/objects/DA_Event__b/fields/Acknowledged_Date__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Date__c</fullName>
    <label>Acknowledged Date</label>
    <type>DateTime</type>
</CustomField>