force-app/main/default/objects/DA_Event__b/fields/Finished_Date__c.field-meta.xml
<CustomField>
    <fullName>Finished_Date__c</fullName>
    <label>Finished Date</label>
    <type>DateTime</type>
</CustomField>