force-app/main/default/objects/DA_Event__b/fields/mh_Green_Sheet_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>mh_Green_Sheet_Created_Date__c</fullName>
    <label>Green Sheet Created Date</label>
    <type>DateTime</type>
</CustomField>