force-app/main/default/objects/DA_Event__b/fields/S_CreatedById__c.field-meta.xml
<CustomField>
    <fullName>S_CreatedById__c</fullName>
    <label>Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CreatedBy1564550193408</relationshipName>
    <type>Lookup</type>
</CustomField>