force-app/main/default/objects/DA_Event__b/fields/S_DurationInMinutes__c.field-meta.xml
<CustomField>
    <fullName>S_DurationInMinutes__c</fullName>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>