force-app/main/default/objects/DA_Event__b/fields/S_IsGroupEvent__c.field-meta.xml
<CustomField>
    <fullName>S_IsGroupEvent__c</fullName>
    <label>Is Group Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>