force-app/main/default/objects/DA_Event__b/fields/S_OriginalInstanceDateTime__c.field-meta.xml
<CustomField>
    <fullName>S_OriginalInstanceDateTime__c</fullName>
    <label>Original Instance DateTime</label>
    <type>DateTime</type>
</CustomField>