force-app/main/default/objects/DA_Event__b/fields/S_StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>S_StartDateTime__c</fullName>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>